--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -18,6 +18,13 @@ archives:
       windows: Windows
       386: i386
       amd64: x86_64
+    format_overrides:
+      - goos: windows
+        format: zip
+    files:
+      - LICENSE
+      - README.MD
+      - systemd/*
 checksum:
   name_template: 'checksums.txt'
 snapshot:
