--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -8,7 +8,7 @@ builds:
   - env:
       - CGO_ENABLED=0
     ldflags:
-      - -w -s
+      - -w -s -X main.Version={{.Version}}
     goos:
       - linux
       - windows
