--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -4,12 +4,21 @@ before:
 builds:
   - env:
       - CGO_ENABLED=0
+    binary: nvdaRemoteServer
     ldflags:
       - -w -s -X main.Version={{.Version}}
     goos:
       - linux
       - windows
       - darwin
+    goarch:
+      - 386
+      - amd64
+      - arm
+      - arm64
+    ignore:
+      - goos: darwin
+        goarch: 386
 archives:
   - replacements:
       darwin: Darwin
