Update goreleaser with different replacements for archive name, and format MacOS archive as zip.

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -21,13 +21,16 @@ builds:
         goarch: 386
 archives:
   - replacements:
-      darwin: Darwin
+      darwin: MacOS
       linux: Linux
       windows: Windows
       386: i386
       amd64: x86_64
+      arm64: aarch64
     format_overrides:
       - goos: windows
+        format: zip
+      - goos: darwin
         format: zip
     files:
       - LICENSE
