Place all archived files in their own directory.

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -36,6 +36,7 @@ archives:
       - LICENSE
       - README.MD
       - systemd/*
+    wrap_in_directory: true
 checksum:
   name_template: 'checksums.txt'
 snapshot:
