Add more platform builds.

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -15,11 +15,20 @@ builds:
       - freebsd
       - netbsd
       - openbsd
+      - plan9
     goarch:
       - 386
       - amd64
       - arm
       - arm64
+      - mips
+      - mips64
+      - mips64le
+      - mipsle
+      - ppc64
+      - ppc64le
+      - riscv64
+      - s390x
     ignore:
       - goos: darwin
         goarch: 386
@@ -32,6 +41,7 @@ archives:
       freebsd: FreeBSD
       netbsd: NetBSD
       openbsd: OpenBSD
+      plan9: Plan9
       386: i386
       amd64: x86_64
       arm64: aarch64
