Disable CGO to avoid glibc compatibility errors, hopefully link static.

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -4,6 +4,8 @@ before:
     - go mod tidy
 builds:
   -
+    env:
+      - CGO_ENABLED=0
     binary: nvdaRemoteServer
     asmflags:
       - all=-trimpath={{.Env.PWD}}
