Move goreleaser to GitHub action.

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -80,6 +80,7 @@ snapshot:
   name_template: "{{ .Tag }}-next"
 signs:
   - artifacts: checksum
+    args: ["--batch", "-u", "{{ .Env.GPG_FINGERPRINT }}", "--output", "${signature}", "--detach-sign", "${artifact}"]
 changelog:
   sort: asc
   filters:
