--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,20 +1,46 @@
 name: Publish Docker image
+
 on:
   push:
     tags:
       - 'v*'
+
 jobs:
-  push_to_registry:
-    name: Push Docker image to GitHub Packages
+  push_to_registries:
+    name: Push Docker image to multiple registries
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
+      contents: read
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
-      - name: Push to GitHub Packages
-        uses: docker/build-push-action@v1
+      
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v1
         with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+      
+      - name: Log in to the Container registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-          registry: ghcr.io
-          repository: tech10/nvdaremoteserver-docker
-          tag_with_ref: true
+      
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v3
+        with:
+          images: |
+            tech10/nvdaremoteserver
+            ghcr.io/tech10/nvdaremoteserver-docker
+      
+      - name: Build and push Docker images
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
