--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,18 +2,12 @@ on: [push, pull_request]
 name: Build
 jobs:
   build:
-    strategy:
-      matrix:
-        go-version: |
-          1.15.15
-          ${{ secrets.GO_LATEST }}
-        os: [ubuntu-latest]
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     steps:
     - name: Install Go
       uses: actions/setup-go@v2
       with:
-        go-version: ${{ matrix.go-version }}
+        go-version: ${{ secrets.GO_LATEST }}
     - name: Checkout code
       uses: actions/checkout@v2
     - name: Cash Builder
@@ -22,6 +16,6 @@ jobs:
         path: |
           ~/.cache/go-build
           ~/go/pkg/mod
-        key: ${{ runner.os }}-go-${{ matrix.go-version }}
+        key: ${{ runner.os }}-go-${{ secrets.GO_LATEST }}
     - name: Build
       run: go build
