--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,12 +2,18 @@ on: [push, pull_request]
 name: Build
 jobs:
   build:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go-version: |
+          1.15.15
+          ${{ secrets.GO_LATEST }}
+        os: [ubuntu-latest]
+    runs-on: ${{ matrix.os }}
     steps:
     - name: Install Go
       uses: actions/setup-go@v2
       with:
-        go-version: ${{ secrets.GO_LATEST }}
+        go-version: ${{ matrix.go-version }}
     - name: Checkout code
       uses: actions/checkout@v2
     - name: Cash Builder
@@ -16,6 +22,6 @@ jobs:
         path: |
           ~/.cache/go-build
           ~/go/pkg/mod
-        key: ${{ runner.os }}-go-${{ secrets.GO_LATEST }}
+        key: ${{ runner.os }}-go-${{ matrix.go-version }}
     - name: Build
       run: go build
