--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,9 +4,7 @@ jobs:
   build:
     strategy:
       matrix:
-        go-version: |
-          1.15.15
-          ${{ secrets.GO_LATEST }}
+        go-version: [1.15.15, 1.17.5]
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
