--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -27,6 +27,9 @@ jobs:
           gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
           passphrase: ${{ secrets.GPG_PASSPHRASE }}
       -
+        name: Get Go Version
+        run: go version
+      -
         name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
         with:
