--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ jobs:
   build:
     strategy:
       matrix:
-        go-version: [1.15.15, 1.20]
+        go-version: ['1.15.15', '1.20.0']
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
