--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,22 +4,16 @@ jobs:
   build:
     strategy:
       matrix:
-        go-version: ['1.20.0']
-        os: [ubuntu-latest]
-    runs-on: ${{ matrix.os }}
+        go-version: ['stable']
+    runs-on: ubuntu-latest
     steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
     - name: Install Go
       uses: actions/setup-go@v3
       with:
         go-version: ${{ matrix.go-version }}
-    - name: Checkout code
-      uses: actions/checkout@v3
-    - name: Cash Builder
-      uses: actions/cache@v3
-      with:
-        path: |
-          ~/.cache/go-build
-          ~/go/pkg/mod
-        key: ${{ runner.os }}-go-${{ matrix.go-version }}
+        check-latest: true
+        cache: true
     - name: Build
       run: go build
