Enable some useful linters, and correct a couple linting errors.

--- a/.golangci.toml
+++ b/.golangci.toml
@@ -8,14 +8,17 @@
     "asciicheck",
     "bidichk",
     "contextcheck",
+    "decorder",
     "depguard",
     "dogsled",
     "dupl",
+    "dupword",
     "errcheck",
     "errname",
     "errorlint",
     "exportloopref",
     "forcetypeassert",
+    "gocheckcompilerdirectives",
     "goconst",
     "gocyclo",
     "godot",
@@ -37,6 +40,7 @@
     "unparam",
     "unused",
     "vetshadow",
+    "wastedassign",
     "whitespace",
   ]
 
