Update goreleaser.yml to validate against version 2.6 of goreleaser.

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -51,9 +51,9 @@ archives:
   -
     format_overrides:
       - goos: windows
-        format: zip
+        formats: zip
       - goos: darwin
-        format: zip
+        formats: zip
     files:
       - LICENSE
       - README.MD
