goreleaser config updates

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -47,6 +47,8 @@ builds:
     ignore:
       - goos: darwin
         goarch: 386
+      - goos: windows
+        goarch: arm
 archives:
   -
     format_overrides:
